@@ -45,6 +45,7 @@ int __pascal far get_tile(int room,int col,int row) {
 // seg006:005D
 int __pascal far find_room_of_tile() {
 	again:
+#ifdef FIX_CORNER_GRAB
 	// Check tile_row < 0 first, this way the prince can grab a ledge at the bottom right corner of a room with no room below.
 	// Details: https://forum.princed.org/viewtopic.php?p=30410#p30410
 	if (tile_row < 0) {
@@ -55,6 +56,7 @@ int __pascal far find_room_of_tile() {
 		//find_room_of_tile();
 		goto again;
 	}
+#endif
 	if (tile_col < 0) {
 		tile_col += 10;
 		if (curr_room) {
@@ -71,7 +73,17 @@ int __pascal far find_room_of_tile() {
 		//find_room_of_tile();
 		goto again;
 	}
+#ifdef FIX_CORNER_GRAB
 	// if (tile_row < 0) was here originally
+	if (tile_row < 0) {
+		tile_row += 3;
+		if (curr_room) {
+			curr_room = level.roomlinks[curr_room - 1].up;
+		}
+		//find_room_of_tile();
+		goto again;
+	}
+#endif
 	if (tile_row >= 3) {
 		tile_row -= 3;
 		if (curr_room) {
